sumo/tests/duarouter/errors/empty_vclass/empty_vclass_test_flows/routes.duarouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 03/28/14 12:28:36 by SUMO duarouter Version dev-SVN-rUNKNOWN
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo-sim.org/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <flow-files value="input_flows.flows.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo-sim.org/xsd/routes_file.xsd">
    <vType id="0" vClass="ignoring"/>
    <vehicle id="0.0" type="0" depart="0.00">
        <route edges="absBeg middle end absEnd"/>
    </vehicle>
</routes>
